# mdx_better_lists

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  test_parseblocks.py
mdx_better_lists/: __init__.py  extension.py
tests/: conftest.py  test_advanced.py  test_always_start_at_one.py  test_basic.py  test_marker_separation.py  test_nested.py  test_paragraphs.py  test_preserve_numbers.py  test_separation.py  test_truly_sane_compatibility.py
